# spargio

./: Cargo.toml  DESIGN_OPTIONS.md  IMPLEMENTATION_LOG.md  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
architecture_decision_records/: ADR-0001-tokio-integration.md  ADR-0002-runtime-focus.md
benches/: disk_io.rs  fanout_fanin.rs  fs_api.rs  net_api.rs  net_experiments.rs  ping_pong.rs
examples/: mixed_mode_service.rs  network_work_stealing.rs  quickstart_file_server.rs  quickstart_ingest.rs  quickstart_network.rs
scripts/: bench_fanout_guardrail.sh  bench_fanout_smoke.sh  bench_kpi_guardrail.sh  bench_ping_guardrail.sh
spargio-macros/: Cargo.toml
spargio-macros/src/: lib.rs
src/: lib.rs
tests/: boundary_tdd.rs  entry_macro_tdd.rs  ergonomics_tdd.rs  primitives_tdd.rs  runtime_tdd.rs  slices_tdd.rs  tokio_compat_fd_tdd.rs  tokio_compat_stream_hardening_tdd.rs  tokio_compat_stream_tdd.rs  tokio_compat_tdd.rs  tokio_interop_tdd.rs  tokio_poll_async_tdd.rs  tokio_poll_reactor_tdd.rs  tokio_runtime_lane_tdd.rs  tokio_runtime_wait_tdd.rs  uring_native_tdd.rs
