[package]
name = "spargio"
version = "0.1.0"
edition = "2024"

[dependencies]
crossbeam-channel = "0.5"
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "io-util"] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.11"
libc = "0.2"
slab = "0.4"

[features]
default = []
uring-native = []

[[bench]]
name = "ping_pong"
harness = false

[[bench]]
name = "disk_io"
harness = false

[[bench]]
name = "fanout_fanin"
harness = false
