[package]
name = "spargio"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
crossbeam-channel = "0.5"
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "io-util", "net"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
compio = { version = "0.18.0", default-features = false, features = ["runtime", "io-uring", "fs", "net", "io"] }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7.11"
libc = "0.2"
slab = "0.4"

[features]
default = []
uring-native = []

[[bench]]
name = "ping_pong"
harness = false

[[bench]]
name = "fs_api"
harness = false

[[bench]]
name = "fanout_fanin"
harness = false

[[bench]]
name = "net_api"
harness = false

[[bench]]
name = "net_experiments"
harness = false
