[package]
name = "spargio-macros"
version = "0.3.0"
edition = "2024"
license = "MIT"
description = "Procedural macros for spargio runtime entrypoints"
repository = "https://github.com/soumyarupsarkar/spargio"
homepage = "https://github.com/soumyarupsarkar/spargio"
documentation = "https://docs.rs/spargio-macros"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
